--- a/styles/style.css
+++ b/styles/style.css
@@ -33,3 +33,18 @@ body {
   height: 100vh;
   background-color: white;
 }
+.content_title {
+  color: white;
+  background-color: #dcbcad;
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+.paragraph {
+  color: #665858;
+  font-size: 16px;
+}
