--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Limelight&display=swap");
+
 body {
   margin: 0%;
+}
+.header {
+  width: 100vw;
+  height: 15vh;
+  position: sticky;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.name,
+.function {
+  font-family: "Limelight", cursive;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 1rem;
+}
+.function {
+  font-size: 1rem;
+}
+.container-fluid {
+  margin-top: 10vh;
+  min-height: 75vh;
+  width: 100%;
+}
+
+.col_colored {
+  background-color: aqua;
+  border: 2px solid black;
 }
