--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,38 @@
-@import url("https://fonts.googleapis.com/css2?family=Limelight&display=swap");
+/* font-family: 'Lato', sans-serif; 
+font-family: 'Oswald', sans-serif; */
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Oswald&display=swap");
 
 body {
   margin: 0%;
+  display: block;
 }
 .header {
   width: 100vw;
+  background-color: #4c4f4d;
   height: 15vh;
-  position: sticky;
-  margin-left: auto;
-  margin-right: auto;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  background: linear-gradient(#204229, #437a52);
+}
+.intro {
+  font-family: "Lato", sans-serif;
+  font-weight: bolder;
+  height: 15vh;
+  background: linear-gradient(#204229, #437a52);
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-}
-.name,
-.function {
-  font-family: "Limelight", cursive;
-  font-size: 2rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
-  align-items: center;
-  align-content: center;
-  padding: 1rem;
+  text-align: center;
+}
+.name {
+  font-size: 3rem;
+  color: #a6e0b6;
+  padding-bottom: 1rem;
+  text-shadow: 5px 5px #3b423d;
 }
 .function {
-  font-size: 1rem;
-}
-.container-fluid {
-  margin-top: 10vh;
-  min-height: 75vh;
-  width: 100%;
-}
-
-.col_colored {
-  background-color: aqua;
-  border: 2px solid black;
+  font-size: 1.5rem;
+  color: #d8f0df;
+  text-shadow: 2px 2px #3b423d;
 }
