--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,21 @@ body {
   margin: 0%;
   display: block;
 }
+h2 {
+  letter-spacing: 4px;
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: #d8f0df;
+}
+a:visited {
+  color: #d8f0df;
+}
+a:hover {
+  color: rgba(41, 53, 46, 0.56);
+}
+
 .header {
   width: 100vw;
   background-color: #4c4f4d;
@@ -34,19 +49,59 @@ body {
   font-size: 1.5rem;
   color: #d8f0df;
   text-shadow: 2px 2px #3b423d;
+  padding-bottom: 10px;
 }
 .container {
+  display: flex;
   background-size: inherit;
   background: #437a52;
-  animation: fadebackground 6s infinite;
+  font-family: "Oswald", sans-serif;
+  animation: fadebackground 2s infinite;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
   height: 85vh;
   width: 100%;
 }
+
+.left_side {
+  height: 85vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  border-right: 10px solid #204229;
+  padding: 0 10px;
+}
+.picture,
+.profile,
+.contact {
+  width: 100%;
+  height: 33.333%;
+  color: #d8f0df;
+  padding: 0 10px;
+  text-align: center;
+  border-top: solid 5px #204229;
+}
+.picture {
+  background-image: url(../poza_profil.jpg);
+  background-size: contain;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contact {
+  line-height: 1.8;
+  border-bottom: solid 5px #204229;
+}
+.right.side {
+  width: 70%;
+}
+
 @keyframes fadebackground {
   from {
-    background-color: #437a52;
+    background-color: #204229;
   }
   to {
-    background-color: #204229;
+    background-color: #437a52;
   }
 }
