--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,9 @@
 font-family: 'Oswald', sans-serif; */
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Oswald&display=swap");
 
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0%;
   display: block;
@@ -23,11 +26,11 @@ a:hover {
 
 .header {
   width: 100vw;
-  background-color: #4c4f4d;
+  background: linear-gradient(#204229, #437a52);
   height: 15vh;
   box-shadow: rgba(58, 114, 83, 0.56) 0px 22px 70px 40px;
 }
-.intro {
+.intro { 
   font-family: "Lato", sans-serif;
   font-weight: bolder;
   height: 15vh;
@@ -53,49 +56,45 @@ a:hover {
 }
 .container {
   display: flex;
+  flex-direction: column;
   background-size: inherit;
   background: #437a52;
   font-family: "Oswald", sans-serif;
   animation: fadebackground 2s infinite;
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
-  height: 85vh;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
-.left_side {
-  height: 85vh;
+.subheader {
+  height: 15vh;
   width: 100%;
   display: flex;
-  flex-direction: row;
-  border-right: 10px solid #204229;
-  padding: 0 10px;
+  align-self: center;
+  justify-content: center;
 }
-.picture,
-.profile,
-.contact {
-  width: 100%;
-  height: 33.333%;
+.profile {
+  width: 60%;
+  height: 100%;
   color: #d8f0df;
-  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   border-top: solid 5px #204229;
+  align-self: center;
 }
-.picture {
-  background-image: url(../poza_profil.jpg);
-  background-size: contain;
-  background-position-x: center;
-  background-repeat: no-repeat;
-  margin-left: auto;
-  margin-right: auto;
+.content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 }
 .contact {
   line-height: 1.8;
   border-bottom: solid 5px #204229;
 }
-.right.side {
-  width: 70%;
-}
+
 
 @keyframes fadebackground {
   from {
